# pyclipmon

./: .pre-commit-config.yaml  README.md  clipmon.py  meson.build  pick.c  pyproject.toml
pyclipmon/: clipmon.py
pyclipmon/zwlr_data_control/: zwlr_data_control_device_v1.py  zwlr_data_control_offer_v1.py
zwlr_data_control/: zwlr_data_control_manager_v1.py  zwlr_data_control_source_v1.py
