[project]
name = "pyclipmon"
version = "0.1"
description = ""
authors = [{name = "Marcin Bachry", email = "hegel666@gmail.com"}]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "pywayland",
  "psutil",
]

[project.scripts]
pyclipmon = "pyclipmon.clipmon:main"

[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 120
target-version = ['py313']
skip-string-normalization = true

[tool.ruff]
line-length = 120
target-version = 'py312'

[tool.ruff.lint]
select = [
  'A',   # flake8-builtins
  'B',   # flake8-bugbear
  'C4',  # flake8-comprehensions
  'DTZ', # flake8-datetimez
  'E',   # pycodestyle - error
  'ERA', # eradicate
  'F',   # Pyflakes
  'I',   # isort
  'ICN', # flake8-import-conventions
  'ISC', # flake8-implicit-str-concat
  'UP',  # pyupgrade
  'W',   # pycodestyle - warning
]
ignore = [
  'E501', # Line too long
  'E402', # Module level import not at top of file
  'ERA001',
]
fixable = ['I', 'UP']
